--- a/index.html
+++ b/index.html
@@ -4,71 +4,78 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Interactive Resumes</title>
+  <link rel="stylesheet" href="css/style-views.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/style-mobile.css">
-  <link rel="stylesheet" href="css/style-views.css">
+  <link rel="stylesheet" href="css/style-tablet.css">
   <link rel="stylesheet" href="css/animation.css">
   <link href="https://fonts.googleapis.com/css?family=Pangolin|Indie+Flower" rel="stylesheet">
 </head>
 
 <body>
-<div class="html">
-<div class="main-page">
-  <div class="heading">
-      <h1 class="inline-block bounceInLeft">Responsive</h1>
-      <h2 class="go-design increase-font inline-block hover-color"> design.</h2>
+<div id="device">
+
+<div class="iphone-camera hidden"></div>
+<div class="iphone-speaker hidden"></div>
+
+<div class="view">
+<div class="heading">
+  <h1 class="inline-block bounceInLeft">Responsive</h1>
+  <h2 class="go-design increase-font inline-block hover-color"> design.</h2>
+</div>
+
+<div class="resume">
+  <div class="resume-nav">
+    <div class="education col-30">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="feather">
+        <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
+        <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
+      </svg>
+    </div>
+    <div class="jobs col-30">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="feather">
+        <rect x="10" y="3" width="4" height="18"></rect>
+        <rect x="18" y="8" width="4" height="13"></rect>
+        <rect x="2" y="13" width="4" height="8"></rect>
+      </svg>
+    </div>
+     <div class="life col-30">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="feather">
+        <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
+      </svg>
+    </div>
   </div>
-  <div class="resume">
-    <div class="resume-nav">
-      <div class="education col-30">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="feather">
-          <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
-          <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
-        </svg>
-      </div>
-      <div class="jobs col-30">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="feather">
-          <rect x="10" y="3" width="4" height="18"></rect>
-          <rect x="18" y="8" width="4" height="13"></rect>
-          <rect x="2" y="13" width="4" height="8"></rect>
-        </svg>
-      </div>
-       <div class="life col-30">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="feather">
-          <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
-        </svg>
-      </div>
+  <div class="resume-content">
+    <h1 class="js-list-head"></h1>
+    <div class="resume-content-nav sm-hidden">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"  class="feather">
+        <line x1="20" y1="12" x2="4" y2="12"></line>
+        <polyline points="10 18 4 12 10 6"></polyline>
+      </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="feather">
+        <line x1="4" y1="12" x2="20" y2="12"></line>
+        <polyline points="14 6 20 12 14 18"></polyline>
+      </svg>
     </div>
-    <div class="resume-content">
-      <h1 class="js-list-head"></h1>
-      <div class="resume-content-nav">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"  class="feather">
-          <line x1="20" y1="12" x2="4" y2="12"></line>
-          <polyline points="10 18 4 12 10 6"></polyline>
-        </svg>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="feather">
-          <line x1="4" y1="12" x2="20" y2="12"></line>
-          <polyline points="14 6 20 12 14 18"></polyline>
-        </svg>
-      </div>
-      <ul class="js-list"></ul>
-    </div>
+    <div class="js-list list"></div>
   </div>
   <svg class="bottom-right arrow go-design" viewBox="0 0 24 24">
     <path d="M6.38,6H17.63L12,16L6.38,6M3,4L12,20L21,4H3Z" />
   </svg>
 </div>
 
+<div class="map"></div>
+
 <div class="design-page page">
   <h2 id="cross-platform"></h2>
   <div class="design-devices">
     <label class="xs-block">
-        <svg class="mobile mobile-svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <svg class="mobile mobile-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
           <path d="M17,19H7V5H17M17,1H7C5.89,1 5,1.89 5,3V21A2,2 0 0,0 7,23H17A2,2 0 0,0 19,21V3C19,1.89 18.1,1 17,1Z" />
         </svg>
     </label>
     <label class="xs-block">
-        <svg class="tablet mobile-svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <svg class="tablet mobile-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
           <path d="M19,18H5V6H19M21,4H3C1.89,4 1,4.89 1,6V18A2,2 0 0,0 3,20H21A2,2 0 0,0 23,18V6C23,4.89 22.1,4 21,4Z" />
         </svg>
     </label>
@@ -85,7 +92,7 @@
 <div class="contact-page page">
   <div class="contacts">
     <a href="https://twitter.com/AzisJons" class="xs-block">
-      <svg class="twitter mobile-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+      <svg class="feather mobile-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
         <path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path>
       </svg>
     </a>
@@ -96,8 +103,8 @@
       </svg>
     </a>
     <a href="https://www.facebook.com/azuolas.krusna" class="xs-block">
-      <svg class="facebook mobile-svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-        <path fill="#fff" d="M17,2V2H17V6H15C14.31,6 14,6.81 14,7.5V10H14L17,10V14H14V22H10V14H7V10H10V6A4,4 0 0,1 14,2H17Z" />
+      <svg class="feather mobile-svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <path fill="#fff" d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z" />
       </svg>
     </a>
   </div>
@@ -105,23 +112,37 @@
 
 <div class="footer">
   <p>
-    <svg viewBox="0 0 24 24">
-      <path d="M14.6,16.6L19.2,12L14.6,7.4L16,6L22,12L16,18L14.6,16.6M9.4,16.6L4.8,12L9.4,7.4L8,6L2,12L8,18L9.4,16.6Z" />
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="feather">
+      <polyline points="8 18 2 12 8 6"></polyline>
+      <polyline points="16 6 22 12 16 18"></polyline>
     </svg>
     with
-    <svg viewBox="0 0 24 24">
-      <path d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z" />
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="feather">
+      <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z">
+      </path>
     </svg>
-    by <a href="https://twitter.com/AzisJons">Ą</a>
+    by 
+    <a href="https://twitter.com/AzisJons">Ą</a>
   </p>
 </div>
 </div>
 
-<div class="iphone-button hidden"></div>
+<div class="iphone-button hidden">
+  <div class="inside"></div>
+</div>
+</div>
 
+<div class="fit hidden">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="feather">
+    <path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"></path>
+  </svg>
+</div>
+
+<script type="text/javascript" src="js/select.js"></script>
 <script type="text/javascript" src="js/helpers.js"></script>
 <script type="text/javascript" src="js/scroll.js"></script>
 <script type="text/javascript" src="js/drag-scroll.js"></script>
+<script type="text/javascript" src="js/fit.js"></script>
 <script type="text/javascript" src="js/cross-platform.js"></script>
 <script type="text/javascript" src="js/components/list.js"></script>
 <script type="text/javascript" src="js/components/add-list.js"></script>
@@ -129,6 +150,9 @@
 <script type="text/javascript" src="js/resume.js"></script>
 <script type="text/javascript" src="js/components/show-list.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
+<script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaj__B0RMzJiIKDF1YpDs1_dAe_WNRZgc&callback=initMap">
+</script>
 
 </body>
 </html>
