--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 <script type="text/javascript" src="js/drag-scroll.js"></script>
 <script type="text/javascript" src="js/fit.js"></script>
 <script type="text/javascript" src="js/cross-platform.js"></script>
+<script type="text/javascript" src="js/map.js"></script>
 <script type="text/javascript" src="js/components/list.js"></script>
 <script type="text/javascript" src="js/components/add-list.js"></script>
 <script type="text/javascript" src="js/components/list-head.js"></script>
