Add a pulse animation. Add description to list items.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="css/style-views.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/style-mobile.css">
-  <link rel="stylesheet" href="css/style-tablet.css">
   <link rel="stylesheet" href="css/animation.css">
   <link href="https://fonts.googleapis.com/css?family=Pangolin|Indie+Flower" rel="stylesheet">
 </head>
@@ -26,6 +25,11 @@
 
 <div class="resume">
   <div class="resume-nav">
+    <div class="life col-30">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="feather pulse">
+        <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
+      </svg>
+    </div>
     <div class="education col-30">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="feather">
         <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
@@ -39,11 +43,6 @@
         <rect x="2" y="13" width="4" height="8"></rect>
       </svg>
     </div>
-     <div class="life col-30">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="feather">
-        <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
-      </svg>
-    </div>
   </div>
   <div class="resume-content">
     <h1 class="js-list-head"></h1>
@@ -54,6 +53,9 @@
   </svg>
 </div>
 
+<div class="map-heading">
+  <h1>International experience</h1>
+</div>
 <div class="map"></div>
 
 <div class="design-page page">
