--- a/index.html
+++ b/index.html
@@ -30,12 +30,6 @@
         <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
       </svg>
     </div>
-    <div class="education col-30">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="feather">
-        <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
-        <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
-      </svg>
-    </div>
     <div class="jobs col-30">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="feather">
         <rect x="10" y="3" width="4" height="18"></rect>
@@ -43,15 +37,27 @@
         <rect x="2" y="13" width="4" height="8"></rect>
       </svg>
     </div>
+    <div class="education col-30">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="feather">
+        <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
+        <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
+      </svg>
+    </div>
   </div>
   <div class="resume-content">
     <h1 class="js-list-head"></h1>
     <div class="js-list list"></div>
   </div>
-  <svg class="bottom-right arrow go-design" viewBox="0 0 24 24">
-    <path d="M6.38,6H17.63L12,16L6.38,6M3,4L12,20L21,4H3Z" />
-  </svg>
+  <div class="skills">
+  <div class="skills-text">
+    <h1>skills</h1>
+    <h3>coding: html5, css3, javascript, python</h3>
+    <h3>languages: Lithuanian, English, German, Italian</h3>
+  </div>
 </div>
+</div>
+
+
 
 <div class="map-heading">
   <h1>International experience</h1>
@@ -79,6 +85,9 @@
         </svg>
     </label>
   </div>
+  <svg class="bottom-right arrow go-design" viewBox="0 0 24 24">
+    <path d="M6.38,6H17.63L12,16L6.38,6M3,4L12,20L21,4H3Z" />
+  </svg>
 </div>
 
 <div class="contact-page page">
@@ -135,13 +144,12 @@
 <script type="text/javascript" src="js/scroll.js"></script>
 <script type="text/javascript" src="js/drag-scroll.js"></script>
 <script type="text/javascript" src="js/fit.js"></script>
-<script type="text/javascript" src="js/cross-platform.js"></script>
 <script type="text/javascript" src="js/map.js"></script>
 <script type="text/javascript" src="js/components/list.js"></script>
 <script type="text/javascript" src="js/components/add-list.js"></script>
 <script type="text/javascript" src="js/components/list-head.js"></script>
 <script type="text/javascript" src="js/resume.js"></script>
-<script type="text/javascript" src="js/components/show-list.js"></script>
+<script type="text/javascript" src="js/cross-platform.js"></script> 
 <script type="text/javascript" src="js/main.js"></script>
 <script async defer
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaj__B0RMzJiIKDF1YpDs1_dAe_WNRZgc&callback=initMap">
