Change from cross-platform to cross-device.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <div class="map"></div>
 
 <div class="design-page page">
-  <h2 id="cross-platform"></h2>
+  <h2 id="cross-device"></h2>
   <div class="design-devices">
     <label class="xs-block">
         <svg class="mobile mobile-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -143,7 +143,7 @@
 <script type="text/javascript" src="js/drag-scroll.js"></script>
 <script type="text/javascript" src="js/fit.js"></script>
 <script type="text/javascript" src="js/map.js"></script>
-<script type="text/javascript" src="js/cross-platform.js"></script> 
+<script type="text/javascript" src="js/cross-device.js"></script> 
 <script type="text/javascript" src="js/components/list.js"></script>
 <script type="text/javascript" src="js/components/add-list.js"></script>
 <script type="text/javascript" src="js/components/list-head.js"></script>
