Change some google svgs to feather svgs.

--- a/index.html
+++ b/index.html
@@ -69,13 +69,15 @@
   <h2 id="cross-device"></h2>
   <div class="design-devices">
     <label class="xs-block">
-        <svg class="mobile mobile-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-          <path d="M17,19H7V5H17M17,1H7C5.89,1 5,1.89 5,3V21A2,2 0 0,0 7,23H17A2,2 0 0,0 19,21V3C19,1.89 18.1,1 17,1Z" />
+        <svg class="mobile mobile-svg feather" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <rect x="5" y="2" width="14" height="20" rx="2" ry="2"></rect>
+          <line x1="12.5" y1="18" x2="12.5" y2="18"></line>
         </svg>
     </label>
     <label class="xs-block">
-        <svg class="tablet mobile-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-          <path d="M19,18H5V6H19M21,4H3C1.89,4 1,4.89 1,6V18A2,2 0 0,0 3,20H21A2,2 0 0,0 23,18V6C23,4.89 22.1,4 21,4Z" />
+        <svg class="tablet mobile-svg feather" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <rect x="2" y="4" width="20" height="16" rx="2" ry="2"></rect>
+          <line x1="18" y1="12.5" x2="18" y2="12.5"></line>
         </svg>
     </label>
     <label class="xs-block">
