--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
     <h3>coding: html5, css3, javascript, python</h3>
     <h3>languages: Lithuanian, English, German, Italian</h3>
   </div>
-  <svg class="bottom-right arrow go-design" viewBox="0 0 24 24">
-    <path d="M6.38,6H17.63L12,16L6.38,6M3,4L12,20L21,4H3Z" />
+  <svg class="bottom-right arrow go-design feather" viewBox="0 0 24 24">
+    <polyline points="7 13 12 18 17 13"></polyline>
+    <polyline points="7 6 12 11 17 6"></polyline>
   </svg>
 </div>
 </div>
